[package]
name = "gsim-gui"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
description = "High speed digital logic simulation"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[dependencies]
gsim = { git = "https://github.com/Artentus/gsim.git" }
egui = "0.21"
egui_extras = { version = "0.21", features = ["image", "svg"] }
image = { version = "0.24", default-features = false, features = ["png"] }
eframe = { version = "0.21", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
serde = "1.0"
unic-langid = { version = "0.9", features = ["serde", "macros"] }
fluent-syntax = "0.11"
fluent = "0.16"
tracing = "0.1"
tracing-unwrap = "0.10"
wgpu = "0.15"
bytemuck = { version = "1.13", features = ["derive"] }
lyon = "1.0"
once_cell = "1.17"
smallvec = "1.10"
ahash = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
