[package]
name = "gsim-gui"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
description = "High speed digital logic simulation"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[dependencies]
gsim = { git = "https://github.com/Artentus/gsim.git" }
egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image", "svg"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
eframe = { version = "0.23.0", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unic-langid = { version = "0.9", features = ["serde", "macros"] }
fluent-syntax = "0.11"
fluent = "0.16"
tracing = "0.1"
tracing-unwrap = "0.10"
wgpu = "0.17.2"
vello = { git = "https://github.com/linebender/vello.git" }
bytemuck = { version = "1.14", features = ["derive"] }
smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
ahash = "0.8"
rfd = "0.11.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", features = ["Window", "Url", "File", "Blob", "HtmlAnchorElement", "BlobPropertyBag", "FilePropertyBag"] }
js-sys = "0.3.65"
getrandom = { version = "0.2", features = ["js"] } # required to enable the feature
